arduino/Nieuw tekstdocument.txt
Arduino: 1.6.11 (Windows 10), Board:"Arduino/Genuino Uno"

C:\Users\berkay\Documents\blazeplate\arduino\displaytest.ino: In function 'void setup()':

displaytest:28: error: redefinition of 'void setup()'

 void setup() {

      ^

C:\Users\berkay\Documents\blazeplate\arduino\arduino.ino:5:6: note: 'void setup()' previously defined here

 void setup(){

      ^

C:\Users\berkay\Documents\blazeplate\arduino\displaytest.ino: In function 'void loop()':

displaytest:46: error: redefinition of 'void loop()'

 void loop() {

      ^

C:\Users\berkay\Documents\blazeplate\arduino\arduino.ino:9:6: note: 'void loop()' previously defined here

 void loop(){

      ^

exit status 1
redefinition of 'void setup()'

This report would have more information with
"Show verbose output during compilation"
option enabled in File -> Preferences.
